[gd_scene load_steps=5 format=2]

[ext_resource path="res://real_deal/scripts/duel/DuelLife.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.7686, 50.4224 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.761905 )
colors = PoolColorArray( 0.136719, 0.000534058, 0.000534058, 1, 1, 0.433594, 0.433594, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 50

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12.728, 50.8251 )
shape = SubResource( 1 )

[node name="ProgressBar" type="TextureProgress" parent="."]
margin_left = -5.2186
margin_top = 101.052
margin_right = 94.7814
margin_bottom = 126.052
rect_rotation = -90.0
value = 50.0
texture_progress = SubResource( 3 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="card_target" from="." to="." method="_on_Area2D_card_target"]
[connection signal="not_card_target" from="." to="." method="_on_Area2D_not_card_target"]
